Thu Mar 19 14:13:33 EST 1998 Adrian Likins <adrian@gimp.org>

	* applied patch from Andy Thomas to brushes.c to 
	improve brush loading via pdb. Fixes problems with
	 bruses of the same name. 

Thu Mar 19 13:21:28 MET 1998 Sven Neumann <sven@gimp.org>

	* docs/gimp_quick_reference.[tex|ps]: added a 
	single-paged reference sheet with most of the hotkeys

Thu Mar 19 03:28:29 PST 1998 Manish Singh <yosh@gimp.org>

	* plug-ins/script-fu/script-fu-scripts.c: handle delete
	event for colorsel correctly
	* plug-ins/polar/polar.c: minor cleanups

Thu Mar 19 01:04:56 PST 1998 Manish Singh <yosh@gimp.org>

	* applied gimp-jbuhler-980315-0 (quelled warnings)

Wed Mar 18 20:57:55 EST 1998 Adrian Likins <adrian@gimp.org>

	 *AlienMap/AlienMap.c CEL/CEL.c CML_explorer/CML_explorer.c
        align_layers/align_layers.c animationplay/animationplay.c
        bmp/bmpwrite.c dbbrowser/dbbrowser.c emboss/emboss.c
        exchange/exchange.c faxg3/faxg3.c faxg3/g3.c gbr/gbr.c
        gif/gif.c gqbist/gqbist.c hot/hot.c ifscompose/ifscompose.c
        iwarp/iwarp.c max_rgb/max_rgb.c maze/maze_face.c
        megawidget/megawidget.c mpeg/mpeg.c nlfilt/nlfilt.c pcx/pcx.c
        plasma/plasma.c pnm/pnm.c print/print-escp2.c
        print/print-pcl.c print/print.c scatter_hsv/scatter_hsv.c
        script-fu/script-fu-scripts.c script-fu/script-fu.c
        sinus/sinus.c tga/tga.c tileit/tileit.c
        vpropagate/vpropagate.c xpm/xpm.c: 
		 More picky picky ansi type
        	stuff from gimp-hpux-980316.patch.        

Wed Mar 18 15:06:13 PST 1998 Manish Singh <yosh@gimp.org>

	* define M_PI if it's not already defined in lots of
	source files

Wed Mar 18 16:57:52 EST 1998 Adrian Likins <adrian@gimp.org>

	 * blend.c brightness_contrast.c brush_select.c brushes.c
          bucket_fill.c by_color_select.c channels_dialog.c
          color_balance.c convolve.c crop.c curves.c eraser.c fileops.c
          frac.c gradient.c histogram_tool.c hue_saturation.c