@@ -3,6 +3,9 @@ Thu Mar 19 14:13:33 EST 1998 Adrian Likins <adrian@gimp.org>
 	* applied patch from Andy Thomas to brushes.c to 
 	improve brush loading via pdb. Fixes problems with
 	 bruses of the same name. 
+	
+	*plugins/script-fu/scripts/ripply-anim.scm: removed
+	until someone fixes it.
 
 Thu Mar 19 13:21:28 MET 1998 Sven Neumann <sven@gimp.org>
 
